@@ -231,6 +231,48 @@ name|apache
 operator|.
 name|hadoop
 operator|.
+name|fs
+operator|.
+name|FileStatus
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|fs
+operator|.
+name|Path
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|fs
+operator|.
+name|PathFilter
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
 name|hbase
 operator|.
 name|HConstants
@@ -2184,6 +2226,168 @@ operator|+
 literal|" region(s) that are in transition states"
 argument_list|)
 expr_stmt|;
+block|}
+specifier|static
+class|class
+name|TableDirFilter
+implements|implements
+name|PathFilter
+block|{
+annotation|@
+name|Override
+specifier|public
+name|boolean
+name|accept
+parameter_list|(
+name|Path
+name|path
+parameter_list|)
+block|{
+comment|// skip the region servers' log dirs&& version file
+comment|// HBASE-1112 want to sperate the log dirs from table's data dirs by a special character.
+name|String
+name|pathname
+init|=
+name|path
+operator|.
+name|getName
+argument_list|()
+decl_stmt|;
+return|return
+operator|!
+name|pathname
+operator|.
+name|startsWith
+argument_list|(
+literal|"log_"
+argument_list|)
+operator|&&
+operator|!
+name|pathname
+operator|.
+name|equals
+argument_list|(
+name|VERSION_FILE_NAME
+argument_list|)
+return|;
+block|}
+block|}
+specifier|static
+class|class
+name|RegionDirFilter
+implements|implements
+name|PathFilter
+block|{
+annotation|@
+name|Override
+specifier|public
+name|boolean
+name|accept
+parameter_list|(
+name|Path
+name|path
+parameter_list|)
+block|{
+return|return
+operator|!
+name|path
+operator|.
+name|getName
+argument_list|()
+operator|.
+name|equals
+argument_list|(
+name|HREGION_COMPACTIONDIR_NAME
+argument_list|)
+return|;
+block|}
+block|}
+comment|/**    * @return the rough number of the regions on fs    * Note: this method simply counts the regions on fs by accumulating all the dirs     * in each table dir (${HBASE_ROOT}/$TABLE) and skipping logfiles, compaction dirs.    * @throws IOException     */
+specifier|public
+name|int
+name|countRegionsOnFS
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|int
+name|regions
+init|=
+literal|0
+decl_stmt|;
+name|FileStatus
+index|[]
+name|tableDirs
+init|=
+name|master
+operator|.
+name|fs
+operator|.
+name|listStatus
+argument_list|(
+name|master
+operator|.
+name|rootdir
+argument_list|,
+operator|new
+name|TableDirFilter
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|FileStatus
+index|[]
+name|regionDirs
+decl_stmt|;
+name|RegionDirFilter
+name|rdf
+init|=
+operator|new
+name|RegionDirFilter
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|FileStatus
+name|tabledir
+range|:
+name|tableDirs
+control|)
+block|{
+if|if
+condition|(
+name|tabledir
+operator|.
+name|isDir
+argument_list|()
+condition|)
+block|{
+name|regionDirs
+operator|=
+name|master
+operator|.
+name|fs
+operator|.
+name|listStatus
+argument_list|(
+name|tabledir
+operator|.
+name|getPath
+argument_list|()
+argument_list|,
+name|rdf
+argument_list|)
+expr_stmt|;
+name|regions
+operator|+=
+name|regionDirs
+operator|.
+name|length
+expr_stmt|;
+block|}
+block|}
+return|return
+name|regions
+return|;
 block|}
 comment|/**    * @return Read-only map of online regions.    */
 specifier|public
